Fix spacing and add bulletproof webkit tap highlight color

--- a/assets/stylesheets/kitten/molecules/form/_slider.scss
+++ b/assets/stylesheets/kitten/molecules/form/_slider.scss
@@ -87,7 +87,8 @@
       }
 
       // Remove webkit highlight color on tap
-      -webkit-tap-highlight-color:rgba(0,0,0,0);
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+      -webkit-tap-highlight-color: transparent;
     }
 
     .k-Slider__ramp {
